# mark-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mark-ai/: __main__.py  hello_crew.py
src/mark-ai/application/features/copywriting/: copy_agents.py  copy_tasks.py
src/mark-ai/application/features/design/: design_agents.py  design_tasks.py
src/mark-ai/application/features/input/: __init__.py  crew.py
src/mark-ai/application/features/input/agents/: input_parser.py
src/mark-ai/application/features/input/tasks/: process_input.py
src/mark-ai/application/features/output/: output_agents.py  output_tasks.py  tasks.py
src/mark-ai/application/features/research/: research_agents.py  research_tasks.py  research_tools.py
src/mark-ai/application/flows/: router.py  run.py
src/mark-ai/application/schemas/: design_schema.py  hia_ouput.py  post_schema.py  state.py
