[project]
name = "mark-ai"
version = "0.1.0"
description = "Marketing AI agents with CrewAI"
readme = "README.md"
requires-python = ">=3.13.5"
authors = [{ name = "Alexander Sosa" }]
dependencies = [
    "agentops>=0.4.21",
    "crewai>=0.177.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mark-ai"]
